element creation in a loop

--- a/index.html
+++ b/index.html
@@ -1,16 +1,33 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Any markup with information about your page goes into the <head> tag-->
+    <!-- Required meta tags (metadata elements) -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>DOM Starter</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
+    <!-- Any markup with content of the page (what displays for a user) would go into the body tag-->
     <h1 id="header">DOM Starter</h1>
+    <h2 id="subheader">Testing</h2>
+
+    <!--
+    <div class="container">
+      <div class="row">
+        <span class="word">hello</span>
+        <span class="word">papaya</span>
+      </div>
+      <div class="row">
+        <span class="word">banana</span>
+        <span class="word">world</span>
+      </div>
+    </div>
+    -->
+
     <!-- Import program logic -->
     <script src="script.js"></script>
   </body>
